Avoid problem with bogus events. b=397039 r=joshmoz sr=roc a=roc